--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "dependencies": {
     "angular": "^1.6.6",
     "angular-route": "^1.6.6",
@@ -25,5 +29,9 @@
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
     "uglify-js": "^3.1.5"
+  },
+  "engines": {
+    "node": "8.2.1"
   }
+
 }
