--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "keywords": [
-    "example",
-    "heroku"
-  ],
   "dependencies": {
     "angular": "^1.6.6",
     "angular-route": "^1.6.6",
@@ -31,7 +27,8 @@
     "uglify-js": "^3.1.5"
   },
   "engines": {
-    "node": "8.2.1"
+    "node": "8.2.1",
+    "npm": "5.3.0"
   }
 
 }
