--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
     "express-jwt": "^5.3.0",
+    "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.0",
@@ -30,5 +31,4 @@
     "node": "8.2.1",
     "npm": "5.3.0"
   }
-
 }
