--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-sanitize": "^1.6.6",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
+    "cool-ascii-faces": "1.3.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
